crates/fai-tests/tests/fixtures/errors/MissingSignature.fai
module MissingSignature

// A public binding without a signature is an error.
//~ ERROR FAI3003
public let exported x = x + 1
